# GEPA_humaneval

./: .gitignore  README.md  data.py  pyproject.toml  requirements.txt  train_humaneval.py
prompt-templates/: instruction_prompt.txt
tests/: __init__.py  test_humaneval_utils.py
utils/: __init__.py  humaneval_utils.py
